Replace licensed datasets by sample datasets (#841)
* Add a new sample dataset

* Rewrite and add new tests based on the sample dataset

* Remove datasets with incompatible license

* Remove datasets based on naturalearth and geonames

* Remove sample vector tile derived from openstreetmap data

* Update the NOTICE, LICENSE, and DISCLAIMER-WIP files

* Remove the JMH benchmarks (GPL License)

* Improve the configuration of the apache rat plugin